12 March 2007

* Section headings are now numbered in MANUAL.

11 March 2007

* You can't use a va_list twice even when it's passed in as an argument. Duh.
  Fixes segfaults on PPC. Reported by Daniel Wilmer.

08 March 2007

* Try to introduce some consistency into tag replacement in strings. Introduce
  a new type (struct replstr) which indicates a string that should be replaced
  before use, and try to make sure replacement happens possibly for all strings
  where replacement should happen on parse. Hopefully this will make it easier
  to handle replacement properly in future too.

07 March 2007

* Handle POLLHUP properly in io.c: if it is set and POLLIN isn't set, the 
  fd has closed. This makes stdin delivery work properly on Linux 2.4.

06 March 2007

* Submatches with commands are now added as tags command0 to command9.
* pipe actions now use the command.c framework, which means their stderr is
  logged and stdout discarded.
* mail_file tag added by maildir delivery and mbox_file by mbox. Also pass the
  tags block up and down between parent and child so these tags actually stick.
* A new exec action, similar to pipe but stdin is /dev/null. This is useful
  in combination with the mail_file and mbox_file tags.

04 March 2007

* Bug fix: fill in the correct size for maildir fetched mail rather than using
  the rounded-up size and adding a ton of nulls.
* -D on the command line overrides macro definitions in the configuration file.
* Build the attachment list when the first attachment match rule is found rather
  than for every mail regardless.
* Add a message_id tag to each mail.

03 March 2007

* add-header action and lines, body_lines, header_lines tags for IMAP/POP3,
  suggested by Frank Terbeck.
* Linux dirname(3)/basename(3) screws up the buffer. Fixed it thanks to Frank
  Terbeck.
* Fixed bugs in string parsing thanks to Frank Terbeck.

02 March 2007

* Made add_tag use varargs and added a server_uid tag to POP3/IMAP messages.