@@ -223,6 +223,8 @@ Or embedded in a string by enclosing the macro name in {}s:
 	%anum = 57
 	include "/etc/file-number-%{anum}"
 
+Macros are not substituted in strings specified using single-quotes.
+
 5 Invoking fdm =================================================================
 
 fdm may be invoked manually from the command line or regularly using a program
@@ -442,7 +444,12 @@ replaced with the result of any bracket expressions in the last regexp (see
 later section on regexps).
 
 Some accounts add additional tags, discussed below.
-	
+
+Tags are replaced in almost all strings (including those in single-quotes!),
+some when the configuration file is parsed and some when the string is used. In
+addition, a leading ~ or ~user is expanded to a home directory where
+appropriate.
+
 6.2 POP3 and POP3S -------------------------------------------------------------
 
 Mail may be fetched from a POP3 account. A POP3 account is defined by
@@ -1215,5 +1222,5 @@ match "^List-Id:.*<full-disclosure\\.lists\\.grok\\.org\\.uk>" in headers
 	actions { "strip-full-disclosure" "full-disclosure" }
 
 ================================================================================
-$Id: MANUAL,v 1.56 2007-03-12 10:24:19 nicm Exp $
+$Id: MANUAL,v 1.57 2007-03-12 11:21:42 nicm Exp $
 
