@@ -1,4 +1,4 @@
-/* $Id: deliver-maildir.c,v 1.38 2007-03-08 15:44:52 nicm Exp $ */
+/* $Id: deliver-maildir.c,v 1.39 2007-03-12 11:21:42 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -56,7 +56,7 @@ deliver_maildir_deliver(struct deliver_ctx *dctx, struct action *t)
 	size_t	 			 first, last;
 	gid_t				 gid;
 
-	path = replace(&data->path, m->tags, m, *dctx->pm_valid, dctx->pm);
+	path = replacepath(&data->path, m->tags, m, *dctx->pm_valid, dctx->pm);
 	if (path == NULL || *path == '\0') {
 		log_warnx("%s: empty path", a->name);
 		goto out;
